--- a/.github/workflows/update_themes.yml
+++ b/.github/workflows/update_themes.yml
@@ -1,5 +1,8 @@
 name: Update Themes
 
+permissions:
+  contents: write  # Дозволяє GitHub Actions пушити зміни
+
 on:
   schedule:
     - cron: '0 0 * * 0'  # Скрипт буде запускатись щонеділі о 00:00 UTC
@@ -10,20 +13,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+
       - name: Install dependencies
         run: pip install requests
+
       - name: Run update script
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}  # ← використовує ваш персональний токен
         run: python update_themes.py
+
       - name: Commit changes
+        env:
+          TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
           git add README.md
           git commit -m "Автоматичне оновлення README.md з новими темами" || echo "No changes to commit"
           git push
