--- a/.github/workflows/update_themes.yml
+++ b/.github/workflows/update_themes.yml
@@ -2,38 +2,47 @@ name: 🧠 Weekly Flow Launcher Theme Sync
 
 on:
   schedule:
-    - cron: '0 0 * * 0'  # ⏰ Every Sunday at 00:00 UTC
-  workflow_dispatch:     # 🖐 Allows manual triggering
+    - cron: '0 0 * * 0'  # ⏰ Щонеділі о 00:00 UTC
+  workflow_dispatch:     # 🖐 Ручний запуск
 
 jobs:
   update:
     name: 🔄 Fetch & Update Themes
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # 🔑 Необхідно для пуша змін
 
     steps:
       - name: 📦 Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # 📚 Отримати повну історію комітів
 
       - name: 🐍 Set Up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.10'  # 🎯 Конкретна версія Python
 
       - name: 📥 Install Dependencies
         run: pip install requests
 
       - name: 📡 Run Theme Sync Script
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 🔒 Використовуємо вбудований токен
         run: python update_themes.py
 
-      - name: 💾 Commit & Push README Changes
+      - name: 💾 Commit & Push Changes
         env:
-          TOKEN: ${{ secrets.PAT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "Theme Sync Bot 🤖"
-          git config --global user.email "themes-bot@flowlauncher.dev"
-          git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
+          git config --global user.email "actions@github.com"
+          
+          # 🔄 Синхронізація з upstream
+          git pull --rebase origin main
+          
           git add README.md
-          git commit -m "🧵 Auto-update README with new themes ✨" || echo "No changes to commit"
-          git push origin HEAD
+          git diff-index --quiet HEAD || {
+            git commit -m "🧵 Auto-update README with new themes ✨"
+            git push origin HEAD:main
+          }
