--- a/.github/workflows/update_themes.yml
+++ b/.github/workflows/update_themes.yml
@@ -18,7 +18,6 @@ jobs:
         with:
           token: ${{ secrets.PAT_TOKEN }}  # 🔐 Використовуємо PAT
           fetch-depth: 0
-          persist-credentials: true
 
       - name: 🐍 Set Up Python
         uses: actions/setup-python@v4
@@ -28,26 +27,19 @@ jobs:
       - name: 📥 Install Dependencies
         run: pip install requests
 
-      - name: 📡 Run Theme Sync Script and Commit Changes
+      - name: 📡 Run Theme Sync Script
         env:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}  # 🗝️ Ваш персональний токен
-        run: |
-          # Налаштування Git
-          git config --local user.name "Theme Sync Bot 🤖"
-          git config --local user.email "themes-bot@flowlauncher.dev"
-          
-          # Авторизація через PAT
-          git remote set-url origin https://x-access-token:${PAT_TOKEN}@github.com/${{ github.repository }}.git
-          
-          # Запуск скрипту оновлення
-          python update_themes.py
-          
-          # Перевірка змін
-          if git diff --name-only | grep -q "README.md"; then
-            # Комміт та пуш
-            git add README.md
-            git commit -m "🧵 Auto-update README with new themes ✨"
-            git push origin HEAD:${GITHUB_REF#refs/heads/}
-          else
-            echo "➰ No changes to commit"
-          fi
+        run: python update_themes.py
+
+      - name: 💾 Commit & Push if README changed
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: 🧵 Auto-update README with new themes ✨
+          file_pattern: 'README.md'
+          commit_user_name: Theme Sync Bot 🤖
+          commit_user_email: themes-bot@flowlauncher.dev
+          commit_author: Theme Sync Bot 🤖 <themes-bot@flowlauncher.dev>
+          push_options: '--force'
+          skip_dirty_check: false
+          token: ${{ secrets.PAT_TOKEN }}
