--- a/.github/workflows/update_themes.yml
+++ b/.github/workflows/update_themes.yml
@@ -4,6 +4,9 @@ on:
   schedule:
     - cron: '0 0 * * 0'  # ⏰ Every Sunday at 00:00 UTC
   workflow_dispatch:     # 🖐 Manual trigger
+  push:
+    branches:
+      - master         # 🚀 Запуск при пуші в master
 
 jobs:
   update:
